ELD3: Fix high contrast legend width

--- a/EnglishLearners3/dev/assets/css/main-highcontrast.css
+++ b/EnglishLearners3/dev/assets/css/main-highcontrast.css
@@ -5671,7 +5671,7 @@ button:hover,
 
 .hex_map_legend_stop {
   height: 15px;
-  width: 75px;
+  width: 100%;
   border: 1px solid;
   border-color: rgba(0, 0, 0, 0.5);
 }
